tests/rosetta/out/C/99-bottles-of-beer.error
cc: exit status 1
/tmp/99-bottles-of-beer.c: In function ‘mochi_main’:
/tmp/99-bottles-of-beer.c:36:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   36 |     printf("%s\n", bottles(i) + " of beer on the wall");
      |                    ~~~~~~~~~~ ^
      |                    |          |
      |                    char *     char *
/tmp/99-bottles-of-beer.c:37:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   37 |     printf("%s\n", bottles(i) + " of beer");
      |                    ~~~~~~~~~~ ^
      |                    |          |
      |                    char *     char *
/tmp/99-bottles-of-beer.c:39:35: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   39 |     printf("%s\n", bottles(i - 1) + " of beer on the wall");
      |                    ~~~~~~~~~~~~~~ ^
      |                    |              |
      |                    char *         char *
