tests/rosetta/out/C/99-bottles-of-beer.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
char *bottles(int n) {
  if (n == 0) {
    return "No more bottles";
  }
  if (n == 1) {
    return "1 bottle";
  }
  char *tmp1 = _str(n);
  char *tmp2 = concat_string(tmp1, " bottles");
  return tmp2;
}

int mochi_main() {
  int i = 99;
  while (i > 0) {
    printf("%s\n", bottles(i) + " of beer on the wall");
    printf("%s\n", bottles(i) + " of beer");
    printf("Take one down, pass it around\n");
    printf("%s\n", bottles(i - 1) + " of beer on the wall");
    i = i - 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
